// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - Living Edge Lab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";
package steeleagle.protocol.services.compute_service;

import "common.proto";

/*
 * Used to configure datasinks for sensor streams
 */
service Compute {
  // Add datasinks to consumer list
  rpc AddDatasinks (AddDatasinksRequest)
	returns (steeleagle.protocol.common.Response) {}
  // Set the datasink consumer list
  rpc SetDatasinks (SetDatasinksRequest)
	returns (steeleagle.protocol.common.Response) {}
  // Remove datasinks from consumer list
  rpc RemoveDatasinks (RemoveDatasinksRequest)
	returns (steeleagle.protocol.common.Response) {}
}

// Denotes where a datasink is located
enum DatasinkLocation {
  REMOTE = 0;
  LOCAL = 1;
}

// Information about a datasink
message DatasinkInfo {
  // Datasink ID
  string id = 1;
  // Datasink location
  DatasinkLocation location = 2;  
}

message AddDatasinksRequest {
  steeleagle.protocol.common.Request request = 1;
  repeated DatasinkInfo datasinks = 2; // Name of target datasinks
}

message SetDatasinksRequest {
  steeleagle.protocol.common.Request request = 1;
  repeated DatasinkInfo datasinks = 2; // Name of target datasinks
}

message RemoveDatasinksRequest {
  steeleagle.protocol.common.Request request = 1;
  repeated DatasinkInfo datasinks = 2; // Name of target datasinks
}
